Linux startup and Java config files.