@@ -1,3 +1,4 @@
+@set /p parameters=<java.cfg
 @echo off
 title Epic Dragon World Server Console
 
@@ -5,7 +6,7 @@ title Epic Dragon World Server Console
 echo Starting Game Server.
 echo.
 
-java -version:1.8 -server -Djava.util.logging.manager=com.epicdragonworld.log.ServerLogManager -Dfile.encoding=UTF-8 -XX:+AggressiveOpts -Xnoclassgc -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseParNewGC -XX:SurvivorRatio=8 -Xmx4g -Xms2g -Xmn1g -jar GameServer.jar
+java %parameters% -jar GameServer.jar
 
 if ERRORLEVEL 2 goto restart
 if ERRORLEVEL 1 goto error
